# slam

estimation_class/: presentation
homework/homework1/: CMakeCache.txt  CMakeLists.txt  CmakeLists.txt  Makefile  cmake_install.cmake  useHello
homework/homework1/cmakePractice/chapter2/: CMakeLists.txt
homework/homework1/cmakePractice/shapter1/: CMakeCache.txt  Makefile  cmake_install.cmake  hello  main.c
homework/homework1/src/: .main.cpp.swp
homework/homework1/submit/report/: DASgenerator.aux  DASgenerator.tex
homework/homework1/第一讲作业资料/papers/: these excellent slides.desktop
homework/homework2/: DASgenerator.aux  DASgenerator.tex
homework/homework2/useEigen/: CMakeCache.txt  CMakeLists.txt  Makefile  Q1  Q1.cpp  Q2  Q2.cpp  cmake_install.cmake  eigenMatrix  eigenMatrix.cpp  restult
lecture/: .~lock.第五讲：特征点法视觉里程计.pptx#  .~lock.第四讲：相机模型与非线性优化.pptx#
opensource/: .gitignore
report/: assignment1.aux  assignment1.tex  bare_conf.aux  bare_conf.blg  bare_conf.tex  bare_conf.tex.bak  bare_conf.tex.sav  bare_conf1.aux  bare_conf1.bbl  bare_conf1.bbl.bak  bare_conf1.blg  bare_conf1.tex  bare_conf1.tex.bak  bare_conf1.tex.sav  bf.eps  cite.aux  references.bib
slambook-master/ch3/useEigen/: Makefile  eigenMatrix  eigenMatrix.cpp
slambook-master/ch3/useGeometry/: Makefile  eigenGeometry
slambook-master/ch5/imageBasics/: imageBasics.cpp
slambook-master/ch5/joinMap/: CMakeLists.txt  Makefile  install  joinMap  joinMap.cbp
slambook-master/ch6/ceres_curve_fitting/: curve_fitting  main.cpp
